// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTransformStyles Get a correct default hover transform styles 1`] = `
Object {
  "": Object {
    "transform": Object {
      "general": Object {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) rotateX(30deg) rotateY(60deg) rotateZ(90deg) ",
        "transform-origin": "0% 0% ",
      },
      "l": Object {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) rotateX(30deg) rotateY(60deg) rotateZ(90deg) ",
        "transform-origin": "0% 0% ",
      },
      "m": Object {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) rotateX(30deg) rotateY(60deg) rotateZ(90deg) ",
        "transform-origin": "0% 0% ",
      },
      "s": Object {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) rotateX(30deg) rotateY(60deg) rotateZ(90deg) ",
        "transform-origin": "0% 0% ",
      },
      "xl": Object {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) rotateX(30deg) rotateY(60deg) rotateZ(90deg) ",
        "transform-origin": "0% 0% ",
      },
      "xs": Object {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) rotateX(30deg) rotateY(60deg) rotateZ(90deg) ",
        "transform-origin": "0% 0% ",
      },
      "xxl": Object {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) rotateX(30deg) rotateY(60deg) rotateZ(90deg) ",
        "transform-origin": "0% 0% ",
      },
    },
  },
}
`;

exports[`getTransformStyles Get a correct transform styles 1`] = `
Object {
  "": Object {
    "transform": Object {
      "general": Object {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) ",
        "transform-origin": "0% 0% ",
      },
      "l": Object {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) ",
        "transform-origin": "0% 0% ",
      },
      "m": Object {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) ",
        "transform-origin": "0% 0% ",
      },
      "s": Object {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) ",
        "transform-origin": "0% 0% ",
      },
      "xl": Object {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) ",
        "transform-origin": "0% 0% ",
      },
      "xs": Object {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) ",
        "transform-origin": "0% 0% ",
      },
      "xxl": Object {
        "transform": "scaleY(2) translateX(-20%) translateY(-10%) ",
        "transform-origin": "0% 0% ",
      },
    },
  },
  ":hover": Object {
    "transform": Object {
      "general": Object {
        "transform": "scaleX(2) translateX(20%) translateY(10%) rotateZ(90deg) ",
      },
      "l": Object {
        "transform": "scaleX(2) translateX(20%) translateY(10%) rotateZ(90deg) ",
      },
      "m": Object {
        "transform": "scaleX(2) translateX(20%) translateY(10%) rotateZ(90deg) ",
      },
      "s": Object {
        "transform": "scaleX(2) translateX(20%) translateY(10%) rotateZ(90deg) ",
      },
      "xl": Object {
        "transform": "scaleX(2) translateX(20%) translateY(10%) rotateZ(90deg) ",
      },
      "xs": Object {
        "transform": "scaleX(2) translateX(20%) translateY(10%) rotateZ(90deg) ",
      },
      "xxl": Object {
        "transform": "scaleX(2) translateX(20%) translateY(10%) rotateZ(90deg) ",
      },
    },
  },
}
`;
